@@ -133,7 +133,7 @@ class WFDieselNav extends WFWidget
             {
                 // set up loading container
                 $loading = new WFYAHOO_widget_Panel("phocoaWFDieselNav_Loading_{$this->id}", $this->page);
-                $loading->setBody('<div style="padding: 10px; font-size: 20px; line-height: 25px;">Searching... please wait...</div><div style="text-align: center; margin-top: 20px;"><img src="' . $this->getWidgetWWWDir() . '/loading.gif" align="center" /></div>');
+                $loading->setBody('<div style="padding: 10px; font-size: 20px; line-height: 25px;">Searching... please wait...</div><div class="phocoaWFDieselNav_Loading"></div>');
                 $loading->setWidth('400px');
                 $loading->setHeight('125px');
                 $loading->setFixedCenter(false);
@@ -162,7 +162,7 @@ class WFDieselNav extends WFWidget
     {
         PHOCOA.runtime.getObject('phocoaWFDieselNav_Popup_{$this->id}').cfg.setProperty('context', ['{$this->id}', 'tl', 'tl']);
         PHOCOA.runtime.getObject('phocoaWFDieselNav_Popup_{$this->id}').show();
-        Element.update('phocoaWFDieselNav_PopupContent_{$this->id}', '<div style=\"padding: 10px; font-size: 20px; line-height: 25px;\">Loading... please wait...</div><div style=\"text-align: center; margin-top: 20px;\"><img src=\"" . $this->getWidgetWWWDir() . "/loading.gif\" align=\"center\" /></div>');
+        Element.update('phocoaWFDieselNav_PopupContent_{$this->id}', '<div style=\"padding: 10px; font-size: 20px; line-height: 25px;\">Loading... please wait...</div><div class=\"phocoaWFDieselNav_Loading\"></div>');
         var url = '" . $this->baseURL() . "/' + dpQueryState + '//' + facetID + '|' + facetSelections.replace(/\//g, '%2F');
         var pars = '';
         var target = 'phocoaWFDieselNav_PopupContent_{$this->id}';
